# Matrix-Rain

./: Cargo.toml  README.md
src/: ansi.rs  colors.rs  config.rs  entity.rs  events.rs  main.rs  matrix.rs  stream.rs  streams.rs  symbols.rs  utils.rs
src/helpers/: colors.rs  direction.rs  mod.rs  utils.rs
src/matrix/: entity.rs  mod.rs  stream.rs
