[package]
name = "matrix-rain"
authors = ["Shresht7"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.0.26", features = ["derive"] }
colorgrad = "0.6.2"
crossterm = "0.26"
rand = "0.8.5"
