[package]
name = "matrix-rain"
version = "0.2.0"
description = "The matrix-rain effect in the terminal"
authors = ["Shresht7"]
repository = "https://github.com/Shresht7/matrix-rain"
license = "MIT"
keywords = ["cli", "command-line-utilities", "matrix-rain"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
crossterm = "0.26"
rand = "0.8.5"
